opam-version: "2.0"
synopsis: "Mirage unikernel for testing XenServer"
description:
  "A minimal Mirage unikernel that can be booted on the XenServer
   hypervisore."
maintainer: ["Christian Lindig <lindig@gmail.com>"]
authors: ["Christian Lindig <lindig@gmail.com>"]
license: "Unlicense"
homepage: "https://github.com/xapi-project/xen-test-vm"
bug-reports: "https://github.com/xapi-project/xen-test-vm/issues"
depends: [
    "mirage-xen"
    "mirage-console"
    "mirage-bootvar-xen"
    "mirage"
    "yojson"
]
build: [
  [make]
]

